--- a/vercel.json
+++ b/vercel.json
@@ -2,26 +2,26 @@
   "version": 2,
   "builds": [
     {
-      "src": "PJDAGDAL/api/index.js",
+      "src": "api/index.js",
       "use": "@vercel/node"
     },
     {
-      "src": "PJDAGDAL/public/**",
+      "src": "public/**",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/favicon.ico",
-      "dest": "/PJDAGDAL/public/favicon.svg"
+      "dest": "/public/favicon.svg"
     },
     {
       "src": "/api/(.*)",
-      "dest": "/PJDAGDAL/api/index.js"
+      "dest": "/api/index.js"
     },
     {
       "src": "/(.*)",
-      "dest": "/PJDAGDAL/api/index.js"
+      "dest": "/api/index.js"
     }
   ]
 }
