--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "express-rate-limit": "^6.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.3",
-    "multer": "^1.4.5-lts.1",
+    "multer": "2.0.2",
     "nodemailer": "^7.0.10",
     "serverless-http": "^3.0.0",
     "xlsx": "^0.18.5"
   },
   "optionalDependencies": {
-    "puppeteer": "^20.9.0"
+    "puppeteer": "24.31.0"
   }
 }
