--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "nodemailer": "^7.0.10",
     "serverless-http": "^3.0.0",
     "xlsx": "^0.18.5"
+    ,
+    "qrcode": "^1.5.1"
   },
   "optionalDependencies": {
     "puppeteer": "24.31.0"
